==> tamanegitaro/8BitDoArcadeStickUSBConverter/lib/OneBitDisplay/OneBitDisplay.cpp <==
#include <stdint.h>
#include <stdlib.h>
#include <unistd.h>
#include <stdio.h>
#include <string.h>
#include "pico/stdlib.h"
#include "OneBitDisplay.h"
#include "obd.inl"

void obdWriteLCDLine(OBDISP *pOBD, uint8_t *pSrc, int iLine)
{
	int x;
	uint8_t c, ucInvert, *d, ucStart;
	uint8_t ucLineBuf[54]; // 400 pixels is max supported width = 50 bytes + 4
	int iPitch = pOBD->width / 8;
	static int iVCOM = 0;

	//    if (pOBD == NULL || pSrc == NULL || pOBD->type < SHARP_144x168)
	//        return; // invalid request
	if (iLine < 0 || iLine >= pOBD->height)
		return;

	ucInvert = (pOBD->invert) ? 0x00 : 0xff;
	gpio_put(pOBD->iCSPin, HIGH); // active high

	ucStart = 0x80; // write command
	iVCOM++;
	if (iVCOM & 0x100) // flip it every 256 lines
		ucStart |= 0x40; // VCOM bit
	ucLineBuf[1] = ucStart;
	// this code assumes I2C, so the first byte is ignored
	_I2CWrite(pOBD, ucLineBuf, 2); // write command(01) + vcom(02)

	d = &ucLineBuf[2];
	ucLineBuf[1] = ucMirror[iLine + 1]; // current line number
	for (x = 0; x < iPitch; x++)
	{
		c = pSrc[0] ^ ucInvert; // we need to brute-force invert it
		*d++ = ucMirror[c];
		pSrc++;
	} // for x
	// write this line to the display
	ucLineBuf[iPitch + 2] = 0; // end of line
	_I2CWrite(pOBD, ucLineBuf, iPitch + 3);
	ucLineBuf[1] = 0;
	_I2CWrite(pOBD, ucLineBuf, 2); // final transfer
	gpio_put(pOBD->iCSPin, LOW);   // de-activate
}

void obdBacklight(OBDISP *pOBD, int bOn)
{
	if (pOBD->iLEDPin != 0xff)
	{
		gpio_put(pOBD->iLEDPin, (bOn) ? HIGH : LOW);
	}
}

void SPI_BitBang(OBDISP *pOBD, uint8_t *pData, int iLen, uint8_t iMOSIPin, uint8_t iSCKPin)
{
	int i;
	uint8_t c;

	while (iLen)
	{
		c = *pData++;

		if (pOBD->iDCPin == 0xff) // 3-wire SPI, write D/C bit first
		{
			gpio_put(iMOSIPin, (pOBD->mode == MODE_DATA));
			gpio_put(iSCKPin, HIGH);
			sleep_ms(0);
			gpio_put(iSCKPin, LOW);
		}

		if (c == 0 || c == 0xff) // quicker for all bits equal
		{
			gpio_put(iMOSIPin, (c & 1));

			for (i = 0; i < 8; i++)
			{
				gpio_put(iSCKPin, HIGH);
				sleep_ms(0);
				gpio_put(iSCKPin, LOW);
			}
		}
		else
		{
			for (i = 0; i < 8; i++)
			{
				gpio_put(iMOSIPin, (c & 0x80) != 0); // MSB first
				gpio_put(iSCKPin, HIGH);
				c <<= 1;
				sleep_ms(0);
				gpio_put(iSCKPin, LOW);
			}
		}
		iLen--;
	}
}

void obdSetDCMode(OBDISP *pOBD, int iMode)
{
	if (pOBD->iDCPin == 0xff) // 9-bit SPI
		pOBD->mode = (uint8_t)iMode;
	else // set the GPIO line
		gpio_put(pOBD->iDCPin, (iMode == MODE_DATA));
}

static void SharpDumpBuffer(OBDISP *pOBD, uint8_t *pBuffer)
{
	int x, y;
	uint8_t c, ucInvert, *s, *d, ucStart;
	uint8_t ucLineBuf[56];
	int iPitch = pOBD->width / 8;
	static uint8_t ucVCOM = 0;
	int iBit;
	uint8_t ucMask;

	ucInvert = (pOBD->invert) ? 0x00 : 0xff;
	gpio_put(pOBD->iCSPin, HIGH); // active high

	ucLineBuf[0] = 0;
	ucStart = 0x80; // write command
	if (ucVCOM)
		ucStart |= 0x40; // VCOM bit
	ucLineBuf[1] = ucStart;
	// this code assumes I2C, so the first byte is ignored
	_I2CWrite(pOBD, ucLineBuf, 2); // write command(01) + vcom(02)
	ucVCOM = !ucVCOM;              // need to toggle this each transaction

	// We need to flip and invert the image in code because the Sharp memory LCD
	// controller only has the simplest of commands for data writing
	if (pOBD->flip)
	{
		for (y = 0; y < pOBD->height; y++) // we have to write the memory in the wrong direction
		{
			ucMask = 0x80 >> (y & 7);
			s = &pBuffer[pOBD->width - 1 + (pOBD->width * ((pOBD->height - 1 - y) >> 3))]; // point to last line first
			d = &ucLineBuf[2];
			ucLineBuf[1] = ucMirror[y + 1]; // current line number
			for (x = 0; x < pOBD->width / 8; x++)
			{
				c = ucInvert; // we need to brute-force invert it
				for (iBit = 7; iBit >= 0; iBit--)
				{
					if (s[0] & ucMask)
						c ^= (1 << iBit);
					s--;
				}
				*d++ = c;
			} // for y
			// write this line to the display
			ucLineBuf[iPitch + 2] = 0; // end of line
			_I2CWrite(pOBD, ucLineBuf, iPitch + 3);
		} // for x
	}
	else // normal orientation
	{
		for (y = 0; y < pOBD->height; y++) // we have to write the memory in the wrong direction
		{
			ucMask = 1 << (y & 7);
			s = &pBuffer[pOBD->width * (y >> 3)]; // point to last line first
			d = &ucLineBuf[2];

			ucLineBuf[1] = ucMirror[y + 1]; // current line number
			for (x = 0; x < pOBD->width / 8; x++)
			{
				c = ucInvert;
				for (iBit = 7; iBit >= 0; iBit--)
				{
					if (s[0] & ucMask)
						c ^= (1 << iBit);
					s++;
				}
				*d++ = c;
			} // for y
			// write this line to the display
			ucLineBuf[iPitch + 2] = 0; // end of line
			_I2CWrite(pOBD, ucLineBuf, iPitch + 3);
		} // for x
	}
	ucLineBuf[1] = 0;
	_I2CWrite(pOBD, ucLineBuf, 2); // final transfer
	gpio_put(pOBD->iCSPin, LOW);   // de-activate
}

int obdMenuRun(SIMPLEMENU *sm)
{
	uint8_t buttons = 0;
	unsigned long ul;
	int iDelta, rc = -1;

	if (sm->bIsRotary)
	{ // read the rotary encoder
		if (gpio_get(sm->u8Enter) == sm->iPressed)
		{
			buttons |= 1; // pressed
			if (buttons != sm->u8BtnState)
				rc = sm->iMenuIndex; // user pressed ENTER, return current menu index
		}
		else
		{ // check for rotary encoder activity
			iDelta = obdMenuReadRotary(sm);
			obdMenuDelta(sm, iDelta);
		}
		sm->u8BtnState = buttons;
	}
	else
	{
		// check the button states
		if (gpio_get(sm->u8Up) == sm->iPressed)
			buttons |= 1;
		if (buttons != sm->u8BtnState) // something changed
		{
			if (sm->bOneButton) // different logic for a single button system
			{
				if (sm->u8BtnState == 0 && buttons == 1) // up button just pressed
				{
					sm->ulPressTime = to_ms_since_boot(get_absolute_time()); // record the press time
				}
				if (sm->u8BtnState == 1 && buttons == 0) // up button just released
				{
					ul = to_ms_since_boot(get_absolute_time()) - sm->ulPressTime;
					if (ul < MENU_LONG_PRESS) // short press = navigate menu
						obdMenuDelta(sm, 1);
					else                   // treat it like a long press
						rc = sm->iMenuIndex; // action
				}
			}
			else // 3 button setup (UP/DOWN/ENTER)
			{
				if (gpio_get(sm->u8Dn) == sm->iPressed)
					buttons |= 2;
				if (gpio_get(sm->u8Enter) == sm->iPressed)
					rc = sm->iMenuIndex;                               // user pressed ENTER, return current menu index
				if ((sm->u8BtnState & 1) == 0 && (buttons & 1) == 1) // Up button pressed
				{
					obdMenuDelta(sm, -1);
				}
				if ((sm->u8BtnState & 2) == 0 && (buttons & 2) == 2) // Down button pressed
				{
					obdMenuDelta(sm, 1);
				}
			}
			sm->u8BtnState = buttons; // save the latest state
		}
	}
	if (rc != -1) // selected
		obdMenuFlash(sm, sm->iMenuIndex);
	return rc;
}
